# Code-Charlie

./: .gitignore  CMakeLists.txt  README.md  gpiod.h  tinker-st7735r.dtbo  tinker-st7735r.dts
App/include/: App.h
App/include/AI/: AIManager.h
App/include/UIX/: WindowExplorer.h
App/src/: App.c  main.c
App/src/AI/: AIManager.c
App/src/UIX/: WindowExplorer.c
App/src/UX/: WindowExplorer.c
Core/include/: BaseGlobal.h  Core.h  Maths.h  Modules.h  Utils.h
Core/include/Maths/: Algebra.h  Arithmetic.h  Complex.h  Geometry.h  Matrices.h  Statistics.h  Vectors.h
Core/include/Modules/: GPIOManager.h  InputManager.h  NetworkManager.h  RenderManager.h
Core/include/Utils/: ArrayList.h  LinkedList.h  ListArray.h  ListLinked.h  ResourceManager.h  Timer.h
Core/src/: Core.c
Core/src/Maths/: Algebra.c  Arithmetic.c  Complex.c  Geometry.c  Matrices.c  Trigonometry.c  Vectors.c
Core/src/Modules/: GPIOManager.c  InputManager.c  NetworkManager.c  RenderManager.c
Core/src/Utils/: ArrayList.c  HashMap.c  LinkedList.c  ListArray.c  ListLinked.c  ResourceManager.c  Timer.c  cJSON.c
include/: CodeCharlieGlobal.h  Maths.h  Util.h
include/Maths/: Algebra.h  Arithmetic.h  Complex.h  Constants.h  Geometry.h  Matrices.h  Statistics.h  Trigonometry.h  Vectors.h
include/Modules/: .TFTManager.h.swp  GPIOManager.h  TFTManager.h
include/Util/: ArrayList.h  LinkedList.h
src/: .main.c.swp  main.c
src/include_sources/Maths/: Algebra.c  Arithmetic.c  Calculus.c  Complex.c  Geometry.c  Matrices.c  Statistics.c  Stats.c  Trigonometry.c  Vectors.c
src/include_sources/Modules/: GPIOManager.c  TFTManager.c
src/include_sources/Util/: ArrayList.c  LinkedList.c
